# 302hist

./: LICENSE  pyproject.toml  requirements.txt
files/: Friday, 1 August 1941.txt  Friday, 1 December 1939.txt  Friday, 1 July 1938.txt  Friday, 1 March 1940.txt  Friday, 1 May 1936.txt  Friday, 1 May 1942.txt  Friday, 1 November 1940.txt  Friday, 1 October 1937.txt  Friday, 10 April 1936.txt  Friday, 10 April 1942.txt  Friday, 10 December 1937.txt  Friday, 10 February 1939.txt  Friday, 10 January 1936.txt  Friday, 10 January 1941.txt  Friday, 10 July 1942.txt  Friday, 10 March 1939.txt  Friday, 10 May 1940.txt  Friday, 10 November 1939.txt  Friday, 10 October 1941.txt  Friday, 11 April 1941.txt  Friday, 11 December 1936.txt  Friday, 11 December 1942.txt  Friday, 11 February 1938.txt  Friday, 11 July 1941.txt  Friday, 11 March 1938.txt  Friday, 11 November 1938.txt  Friday, 11 October 1940.txt  Friday, 11 September 1942.txt  Friday, 12 April 1940.txt  Friday, 12 December 1941.txt  Friday, 12 February 1937.txt  Friday, 12 February 1943.txt  Friday, 12 January 1940.txt  Friday, 12 July 1940.txt  Friday, 12 June 1942.txt  Friday, 12 March 1937.txt  Friday, 12 March 1943.txt  Friday, 12 May 1939.txt  Friday, 12 November 1937.txt  Friday, 12 September 1941.txt  (+1765 more)
src/: process.ipynb  process.py  scrape.ipynb  scrape.py  test.ipynb
src/.ipynb_checkpoints/: test-checkpoint.ipynb
